added PATCH /users/me/sessions/:id for issue #6. Api spec and tests updated
